Closed Bug 902888 Opened 11 years ago Closed 11 years ago

Flash plugins are displayed larger then they should on Gingerbread devices

Categories

(Firefox for Android Graveyard :: Plugins, defect)

ARM
Android
defect
Not set
normal

Tracking

(firefox24 unaffected, firefox25+ verified, firefox26+ verified, fennec25+)

VERIFIED FIXED
Firefox 26
Tracking Status
firefox24 --- unaffected
firefox25 + verified
firefox26 + verified
fennec 25+ ---

People

(Reporter: AdrianT, Assigned: kats)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screenshot
Aurora 25.0a2 2013-08-08/ Nightly 26.0a1 2013-08-08
HTC Desire HD (Android 2.3.5)

Steps to reproduce:
1) Open a website with some flash content(for e.g. intel.com/museumofme or http://people.mozilla.org/~mwargers/tests/flash/flashembed.html)
2) Tap to activate the plugin

Expected results:
The flash plugin is displayed the correct size.

Actual results:
Besides being mispositioned (bug 869368) it is also larger then it should
Also the taps are registered wrong - see http://neave.com/tic-tac-toe - the tap will add the X or O in the wrong position.
This may have been caused by bug 803207, can we get a regression window to verify?
may be related to bug 900592
Assignee: nobody → matt.woodrow
tracking-fennec: ? → 25+
The regression window is:

mozilla-central
good build: 04.07.2013 
bad build: 05.07.2013 
-pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=dcbbfcdf7bb4&tochange=17fe59f6c54a
Bug 803207? Bug 866265?
Flags: needinfo?(bugmail.mozilla)
Assignee: matt.woodrow → bugmail.mozilla
Blocks: 803207
Flags: needinfo?(bugmail.mozilla)
Adrian, can you test with the above try build to see if it is still a problem?
Flags: needinfo?(adrian.tamas)
Tested the trybuild on the HTC Desire HD (Android 2.3.5). Bug 869368 is still reproducible but the issue in this bug has been fixed. Playback works as it should with the plugins set to "Tap to play" or "Enable". I also can't see any regressions from this on an LG Nexus 4 (Android 4.1.1). The fix looks good.
Flags: needinfo?(adrian.tamas)
Awesome, thanks for the quick turnaround!
Attachment #788932 - Flags: review?(snorp)
Comment on attachment 788932 [details] [diff] [review]
Patch

Review of attachment 788932 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, though I am not really sure I understand the new LayoutDeviceRect stuff.
Attachment #788932 - Flags: review?(snorp) → review+
Attachment #788932 - Attachment description: Patch (untested) → Patch
https://hg.mozilla.org/mozilla-central/rev/4b8ffeac11d3
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 26
Comment on attachment 788932 [details] [diff] [review]
Patch

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 803207
User impact if declined: plugins are sized incorrectly on pre-honeycomb hidpi devices
Testing completed (on m-c, etc.): via AdrianT. This should probably bake a few days and be verified on m-c before uplifting
Risk to taking this patch (and alternatives if risky): fairly low risk
String or IDL/UUID changes made by this patch: none
Attachment #788932 - Flags: approval-mozilla-aurora?
Verified this bug on:
Device: LG Nexus 4 (Android 4.2.2)
Build: Nightly 26.0a1 (2013-08-14)
Attachment #788932 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Verified fixed on:
Build: Firefox for Android 25.0a2 (2013-08-27)
Device: HTC Desire HD 
OS: Android 2.3.5
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: