Bug 902888 - Fix coordinate system mismatch with pre-Honeycomb plugins on Android. r=snorp, a=akeybl

The plugin code was returning a rect in LayoutDevicePixels whereas Java
was treating it as a CSS-pixel rect. This patch makes the types more
explicit and adds a conversion in AndroidBridge to convert from the
LayoutDevicePixels to CSSPixel rects.